implementado encabezado responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <div class="Logo-Titulo">
           <img src="imagenes/logo sound harmony blanco.png" class="logo" alt="logo sound harmony">
           <h1>SOUND <br>HARMONY</h1>
+        
         </div>
+         <input type="checkbox" id="menu" class="menu-toggle">
+         <label for="menu"><img src="Imagenes/menu-hamburguesa.png" class="menu-icono" alt="abrir menu"></label>
+
+
 
         <nav class="menu-principal"> <!-- creo una clase por si mas adelante quiero crear otro nav, no me afecte lo ya hecho si no que le creo otra clase a ese nuevo nav-->
             <ul>
